--- a/app/src/main/res/layout/layout_relationship_item.xml
+++ b/app/src/main/res/layout/layout_relationship_item.xml
@@ -65,11 +65,13 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
                         <TextView
+                            android:onClick="@{()->viewModel.handleFinish(0)}"
                             android:id="@+id/tv_cancel"
                             android:text="Cancel"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:onClick="@{()->viewModel.handleFinish(1)}"
                             android:id="@+id/tv_ok"
                             android:layout_marginLeft="12dp"
                             android:text="OK"
