--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,11 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/container"
     tools:context=".AddEditDetail.Main2Activity">
-    <fragment
-        android:id="@+id/addFragment"
-        android:name="com.example.tuananh.module1.AddEditDetail.AddFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></fragment>
 
 </FrameLayout>
