--- a/app/src/main/res/layout/layout_relationship_item.xml
+++ b/app/src/main/res/layout/layout_relationship_item.xml
@@ -34,7 +34,7 @@
                             android:layout_width="48dp"
                             android:layout_height="48dp" />
                         <TextView
-                            android:text="aaaaa"
+                            android:text="@{viewModel.modelRela.model.name}"
                             android:id="@+id/tv_name"
                             android:layout_toLeftOf="@id/iv_profile"
                             android:layout_width="wrap_content"
@@ -46,12 +46,13 @@
                             android:layout_centerVertical="true"
                             android:padding="4dp"
                             android:background="@drawable/curved_rect"
-                            android:text="aaaaa"
+                            android:text="@{viewModel.modelRela.relationship}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                     </RelativeLayout>
                     <FrameLayout
-                        setLayout="@{viewModel.mode}"
+                        mode="@{viewModel.mode}"
+                        onDataHandle="@{viewModel.onHandler}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                     </FrameLayout>
