--- a/app/src/main/res/layout/layout_info.xml
+++ b/app/src/main/res/layout/layout_info.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+    <data>
+        <variable
+            name="isEdit"
+            type="Boolean"></variable>
+    </data>
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,6 +22,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <EditText
+                        android:enabled="@{isEdit}"
                         android:id="@+id/et_name"
                         android:hint="Name"
                         android:layout_width="match_parent"
@@ -27,6 +33,7 @@
                     android:layout_height="wrap_content"
                     >
                     <EditText
+                        android:enabled="@{isEdit}"
                         android:hint="Display Relationship"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
