--- a/app/src/main/res/layout/layout_relationship_item.xml
+++ b/app/src/main/res/layout/layout_relationship_item.xml
@@ -3,6 +3,9 @@
     <data>
         <import type="android.view.View"></import>
         <variable
+            name="isEdit"
+            type="Boolean"></variable>
+        <variable
             name="viewModel"
             type="com.example.tuananh.module1.AddEditDetail.RelaViewModel"></variable>
     </data>
@@ -26,6 +29,7 @@
                         android:layout_height="wrap_content"
                         android:padding="4dp">
                         <de.hdodenhof.circleimageview.CircleImageView
+                            android:clickable="@{viewModel.mode!=2}"
                             android:onClick="@{()->viewModel.onModeChange(1)}"
                             android:id="@+id/iv_profile"
                             android:layout_marginRight="12dp"
@@ -40,6 +44,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:clickable="@{viewModel.mode!=2}"
                             android:onClick="@{()->viewModel.onModeChange(0)}"
                             android:id="@+id/tv_relationship"
                             android:layout_marginLeft="24dp"
