--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -24,6 +24,14 @@
                 android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tvOk"
+                android:visibility="@{!visible ? View.VISIBLE : View.GONE}"
+                android:text="OK"
+                android:layout_marginRight="4dp"
+                android:layout_toLeftOf="@id/tvCancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </RelativeLayout>
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
