--- a/app/src/main/res/layout/layout_relationship_item.xml
+++ b/app/src/main/res/layout/layout_relationship_item.xml
@@ -47,13 +47,21 @@
                             android:clickable="@{viewModel.mode!=2}"
                             android:onClick="@{()->viewModel.onModeChange(0)}"
                             android:id="@+id/tv_relationship"
-                            android:layout_marginLeft="24dp"
+                            android:layout_marginLeft="28dp"
                             android:layout_centerVertical="true"
                             android:padding="4dp"
                             android:background="@drawable/curved_rect"
                             android:text="@{viewModel.modelRela.relationship}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
+                        <ImageView
+                            android:onClick="@{()->viewModel.handleRemove()}"
+                            android:visibility="@{viewModel.edit ? View.VISIBLE : View.GONE}"
+                            android:layout_centerVertical="true"
+                            android:src="@drawable/ic_remove_black_24dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
                     </RelativeLayout>
                     <FrameLayout
                         mode="@{viewModel.mode}"
