--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,10 +7,22 @@
     tools:context=".People.MainActivity"
     android:id="@+id/container">
     <fragment
+        android:layout_above="@id/bnv"
         android:id="@+id/peopleFragment"
         android:name="com.example.tuananh.module1.People.PeopleFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></fragment>
+    <android.support.design.widget.BottomNavigationView
+        android:background="@android:color/white"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:id="@+id/bnv"
+        app:itemIconTint="@drawable/bottom_nav_color"
+        app:itemTextColor="@drawable/bottom_nav_color"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        app:menu="@menu/menu_bottom"
+        app:labelVisibilityMode="labeled"></android.support.design.widget.BottomNavigationView>
 
 
-</FrameLayout>
+</RelativeLayout>
