--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -9,9 +9,8 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="350dp"
             android:background="@color/colorAccent">
-
         </View>
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -25,16 +24,37 @@
                 app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
 
                 <android.support.v7.widget.Toolbar
+                    android:layout_marginLeft="-18dp"
                     app:elevation="0dp"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     app:layout_collapseMode="pin"
-                    android:background="@android:color/transparent"/>
+                    android:background="@android:color/transparent">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/colorAccent">
+                        <ImageView
+                            android:layout_margin="12dp"
+                            android:src="@drawable/ic_arrow_back_black_24dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <TextView
+                            android:textColor="@android:color/white"
+                            android:textSize="18sp"
+                            android:id="@+id/tv_ok"
+                            android:layout_margin="12dp"
+                            android:layout_alignParentRight="true"
+                            android:text="Save"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent" />
+                    </RelativeLayout>
+                </android.support.v7.widget.Toolbar>
                 <RelativeLayout
 
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     app:layout_collapseMode="parallax">
@@ -52,23 +72,20 @@
             </android.support.design.widget.CollapsingToolbarLayout>
         </android.support.design.widget.AppBarLayout>
         <android.support.v4.widget.NestedScrollView
-            android:background="@android:color/white"
+            android:layout_marginBottom="-20dp"
+            android:layout_margin="4dp"
+            android:background="@drawable/curved_white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
             <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="match_parent">
                 <include layout="@layout/layout_info"
                     android:id="@+id/layoutInfo"></include>
                 <include layout="@layout/layout_relationship"
                     android:id="@+id/layoutRelationship"></include>
-                <Button
-                    android:text="OK"
-                    android:id="@+id/btn_ok"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
 
