--- a/app/src/main/res/layout/fragment_people.xml
+++ b/app/src/main/res/layout/fragment_people.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+    <data>
+        <import type="android.view.View"></import>
+        <variable
+            name="viewHandle"
+            type="com.example.tuananh.module1.People.ViewHandle"></variable>
+    </data>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -13,23 +19,43 @@
             android:orientation="vertical">
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="48dp"
                 android:background="@color/colorAccent">
-                <TextView
+                <ImageView
+                    android:onClick="@{()->viewHandle.onModeChange()}"
+                    android:layout_marginLeft="12dp"
                     android:layout_centerVertical="true"
-                    android:text="Menu Holder"
+                    android:src="@drawable/ic_search_black_24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <ImageView
+                    android:onClick="@{()->viewHandle.onAddListener()}"
+                    android:layout_marginRight="12dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/ic_add_black_24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <RelativeLayout
-                    android:background="@drawable/curved_rect"
-                    android:id="@+id/rl_container"
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true">
-                    <TextView
-                        android:id="@+id/tv_search"
-                        android:text="Search"
+                    android:background="@drawable/curved_search"
+                    android:visibility="@{viewHandle.search ? View.VISIBLE : View.GONE}"
+                    android:layout_margin="4dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <EditText
+                        android:text="@={viewHandle.query}"
+                        android:layout_marginLeft="2dp"
+                        android:layout_centerVertical="true"
+                        android:background="@android:color/transparent"
+                        android:layout_toRightOf="@id/iv_cancel"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                    <ImageView
+                        android:id="@+id/iv_cancel"
+                        android:onClick="@{()->viewHandle.onModeChange()}"
+                        android:layout_marginLeft="4dp"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/ic_close_black_24dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                 </RelativeLayout>
@@ -37,18 +63,8 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_people"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
         </LinearLayout>
-
-        <ImageButton
-            android:id="@+id/btn_add"
-            android:layout_margin="8dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/ic_add_black_24dp"
-            android:background="@drawable/rounded_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
 
     </RelativeLayout>
 </layout>
