--- a/app/src/main/res/layout/layout_people_row.xml
+++ b/app/src/main/res/layout/layout_people_row.xml
@@ -14,8 +14,7 @@
         android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:weightSum="3"
-        android:orientation="horizontal"
-        android:id="@+id/people_container">
+        android:orientation="horizontal">
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -23,37 +22,25 @@
             android:layout_margin="4dp"
             app:cardElevation="2dp"
             app:cardCornerRadius="4dp"
-            android:visibility="@{models.size()>=1 ? View.VISIBLE : View.GONE}"
-            android:id="@+id/container">
+            android:visibility="@{models.size()>=1 ? View.VISIBLE : View.GONE}">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp">
                 <de.hdodenhof.circleimageview.CircleImageView
-                    setProfileImage="@{models.size()>=1 ? models.get(0).getId() : -1}"
-                    app:civ_border_width="2dp"
-                    app:civ_border_color="@color/colorAccent"
                     android:id="@+id/civProfile"
                     android:layout_centerHorizontal="true"
-                    android:layout_width="77dp"
-                    android:layout_height="77dp"/>
+                    android:src="@mipmap/ic_launcher"
+                    android:layout_width="68dp"
+                    android:layout_height="68dp" />
                 <TextView
-                    android:id="@+id/tv_name"
-                    android:textSize="18sp"
-                    android:text="@{models.size()>=1 ? models.get(0).getName() : @string/null_value}"
+                    android:textSize="16sp"
+                    android:text="aaa"
                     android:layout_marginTop="8dp"
                     android:layout_centerInParent="true"
                     android:layout_below="@id/civProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-                <TextView
-                    android:textColor="@android:color/darker_gray"
-                    android:layout_marginTop="-4dp"
-                    android:text="Holder"
-                    android:layout_centerInParent="true"
-                    android:layout_below="@id/tv_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
@@ -63,37 +50,25 @@
             android:layout_margin="4dp"
             app:cardElevation="2dp"
             app:cardCornerRadius="4dp"
-            android:visibility="@{models.size()>=2 ? View.VISIBLE : View.GONE}"
-            android:id="@+id/container1">
+            android:visibility="@{models.size()>=2 ? View.VISIBLE : View.GONE}">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp">
                 <de.hdodenhof.circleimageview.CircleImageView
-                    setProfileImage="@{models.size()>=2 ? models.get(1).getId() : -1}"
-                    app:civ_border_width="2dp"
-                    app:civ_border_color="@color/colorAccent"
                     android:id="@+id/civProfile1"
                     android:layout_centerHorizontal="true"
-                    android:layout_width="77dp"
-                    android:layout_height="77dp" />
+                    android:src="@mipmap/ic_launcher"
+                    android:layout_width="68dp"
+                    android:layout_height="68dp" />
                 <TextView
-                    android:textSize="18sp"
-                    android:id="@+id/tv_name1"
-                    android:text="@{models.size()>=2 ? models.get(1).getName() : @string/null_value}"
+                    android:textSize="16sp"
+                    android:text="aaa"
                     android:layout_marginTop="8dp"
                     android:layout_centerInParent="true"
                     android:layout_below="@id/civProfile1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-                <TextView
-                    android:textColor="@android:color/darker_gray"
-                    android:layout_marginTop="-4dp"
-                    android:text="Holder"
-                    android:layout_centerInParent="true"
-                    android:layout_below="@id/tv_name1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
@@ -103,35 +78,23 @@
             android:layout_margin="4dp"
             app:cardElevation="2dp"
             app:cardCornerRadius="4dp"
-            android:visibility="@{models.size()>=3 ? View.VISIBLE : View.GONE}"
-            android:id="@+id/container2">
+            android:visibility="@{models.size()>=3 ? View.VISIBLE : View.GONE}">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp">
                 <de.hdodenhof.circleimageview.CircleImageView
-                    setProfileImage="@{models.size()>=3 ? models.get(2).getId() : -1}"
-                    app:civ_border_width="2dp"
-                    app:civ_border_color="@color/colorAccent"
                     android:id="@+id/civProfile2"
                     android:layout_centerHorizontal="true"
-                    android:layout_width="77dp"
-                    android:layout_height="77dp" />
+                    android:src="@mipmap/ic_launcher"
+                    android:layout_width="68dp"
+                    android:layout_height="68dp" />
                 <TextView
-                    android:textSize="18sp"
-                    android:id="@+id/tv_name2"
-                    android:text="@{models.size()>=3 ? models.get(2).getName() : @string/null_value}"
+                    android:textSize="16sp"
+                    android:text="aaa"
                     android:layout_marginTop="8dp"
                     android:layout_centerInParent="true"
                     android:layout_below="@id/civProfile2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:textColor="@android:color/darker_gray"
-                    android:layout_marginTop="-4dp"
-                    android:text="Holder"
-                    android:layout_centerInParent="true"
-                    android:layout_below="@id/tv_name2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </RelativeLayout>
