--- a/app/src/main/res/layout/layout_people_select.xml
+++ b/app/src/main/res/layout/layout_people_select.xml
@@ -2,7 +2,9 @@
 <layout>
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp">
         <EditText
             android:id="@+id/etSearch"
             android:layout_width="match_parent"
