--- a/app/src/main/res/layout/layout_relationship_select.xml
+++ b/app/src/main/res/layout/layout_relationship_select.xml
@@ -10,7 +10,9 @@
     </data>
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
