--- a/app/src/main/res/layout/layout_relationship.xml
+++ b/app/src/main/res/layout/layout_relationship.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <android.support.v7.widget.RecyclerView
+    <data>
+        <variable
+            name="mode"
+            type="Integer"></variable>
+        <variable
+            name="onDataHandle"
+            type="com.example.tuananh.module1.AddEditDetail.RelaViewModel.OnDataHandle"></variable>
+    </data>
+    <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/rvRelationship">
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/rvRelationship"></android.support.v7.widget.RecyclerView>
+        <FrameLayout
+            android:id="@+id/relationship_handle_container"
+            android:layout_below="@id/rvRelationship"
+            mode="@{mode}"
+            onDataHandle="@{onDataHandle}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></FrameLayout>
 
-    </android.support.v7.widget.RecyclerView>
+    </RelativeLayout>
 </layout>
