--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".People.MainActivity"
     android:id="@+id/container">
-    <fragment
+    <FrameLayout
         android:layout_above="@id/bnv"
-        android:id="@+id/peopleFragment"
-        android:name="com.example.tuananh.module1.People.PeopleFragment"
+        android:id="@+id/main_act_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></fragment>
+        android:layout_height="match_parent"></FrameLayout>
     <android.support.design.widget.BottomNavigationView
         android:background="@android:color/white"
         android:layout_alignParentBottom="true"
